# archives

./: .gitignore  CNAME  LICENCE-APACHE  Makefile  README.md  TODO.md  _config.yml  aliens  gen.pl  migration.md  post.md  problems.md  test.md  uuid.md
.github/workflows/: ActiveMQ-cpanm.yml  ActiveMQ-cpm.yml  ActiveMQ.yml  Alien-CPP-cpanm.yml  Alien-CPP-cpm.yml  Alien-CPP.yml  Alien-DontPanic-cpanm.yml  Alien-DontPanic-cpm.yml  Alien-DontPanic.yml  Alien-DontPanic2-cpanm.yml  Alien-DontPanic2-cpm.yml  Alien-DontPanic2.yml  Alien-ZMQ-Alien-ZMQ-latest-cpanm.yml  Alien-ZMQ-Alien-ZMQ-latest-cpm.yml  Alien-ZMQ-Alien-ZMQ-latest.yml  Alien.yml  AntTweakBar-cpanm.yml  AntTweakBar-cpm.yml  AntTweakBar.yml  Autotools-cpanm.yml  Autotools-cpm.yml  Autotools.yml  BWIPP-cpanm.yml  BWIPP-cpm.yml  BWIPP.yml  Base-ModuleBuild-cpanm.yml  Base-ModuleBuild-cpm.yml  Base-ModuleBuild.yml  Base.yml  Boost-cpanm.yml  Boost-cpm.yml  Box2D-cpanm.yml  Box2D-cpm.yml  Box2D.yml  Build-MB-cpanm.yml  Build-MB-cpm.yml  Build-MB.yml  Build.yml  CImg-cpanm.yml  CImg-cpm.yml  (+652 more)
PyPI-experiments/cyclic-a/: README.md  setup.cfg
PyPI-experiments/cyclic-a/src/cyclic/: a.py
PyPI-experiments/cyclic-b/: README.md  setup.cfg
PyPI-experiments/cyclic-b/src/cyclic/: b.py
PyPI-experiments/diamond-c/: README.md  setup.cfg
PyPI-experiments/diamond-c/src/diamond/: c.py
PyPI-experiments/diamond-d/: README.md  setup.cfg
PyPI-experiments/diamond-e/: README.md  setup.cfg
PyPI-experiments/diamond-f/: README.md  setup.cfg
PyPI-experiments/diamond-f/src/diamond/: f.py
PyPI-experiments/require-me/: README.md  setup.cfg
PyPI-experiments/version-negative/: README.md  setup.cfg
PyPI-experiments/version-negative/src/version/: negative.py
PyPI-experiments/version-regress/: README.md  setup.cfg
PyPI-experiments/version-utf8/: README.md  setup.cfg
PyPI-experiments/version-utf8/src/version/: utf8.py
_includes/: .footer.html.swp  background.html  comments.html  footer.html  head.html  header.html  list_of_articles.html  navigation.html  quotes.html  section.html  section2.html  section3.html  section3.md  sectiontext.html
_layouts/: default.html  post.html  text.html
_posts/: 2020-01-01-happy-new-year-perl.md  2020-01-03-happy-new-year-perl.md  2020-02-01-ready-for-perl-5.32.0.md  2020-06-24-announcing-perl-7.md
_site/: 404.html  README.md  index.html  rrr.html
_site/assets/css/: fonts.css  main.css  main.css.map  vendor.css
aliens-ci/: aliens  gen.pl  uuid.md
aliens-ci/.github/workflows/: Autotools-cpm.yml  Base-ModuleBuild-cpanm.yml  CImg-cpm.yml  (+149 more)
aliens-ci/dirt/: README.md
archic/bs/: Makefile  bs.c
archic/cp/: Makefile  cpa.c
archic/ifdef/: Makefile  ifd.c
archic/incs/: Makefile  a.c  b.c  c.c  d.c
archic/lsd/: Makefile  README.md  lsd.c
archic/mcr/: Makefile  mcr.c
archic/precompiled_headers/: Makefile  main.c  pc.h
archic/separated_compilation/: Makefile  main.c  mystruct.c  mystruct.h
archic/shared/: bar.c  build.sh  foo.c  main.c
archic/simple/: Makefile  main.c
archic/simple_include_structure/: Makefile  main.c  mystruct.h
archic/ss/: Makefile  ss.c
archic/watchdir/: Makefile  README.md  watchdir.c
assets/css/: app.css  comments.css  main.scss  uvendor.css  vendor.css
assets/js/: highlight.pack.js
backup/: abigail_perl_talks_japhs.md  baturin_japhs.md  cpan_japhs.md  fcoburn_japhs.md  japh_discussion.md  japh_discussion.txt  japhs.md  l-japh.md  larry_wall_fortunes.md  n4kz_japhs.md  ppencode_japhs.md  reynoldscem_japhs.md  thomasschoch_japhs.md  trizen_japhs.md
data/: larry-wall  perl-folklore  perl-japhs
messy-ci-workflows/: README.md
pages/: .rrr.md.swp  blog.md  books.md  community.md  cpan.md  dev.md  events.md  examples.md  get.md  grants-proposals.md  index.md  install.md  learn.md  learn2.md  lists.md  rrr.html  rrr.md
pages/learn/: docs.md  examples.md  modules.md
pages/list/: cpan-discuss.md
perl-fortunes/: .gitignore
perl-fortunes/backup/: gnebbia_japhs.md  japh_discussion.md  ltp_japhs.md  n4kz_japhs.md  randal_about_japhs.md
perl-fortunes/data/: larry-wall-facts  perl-japhs
perldot/: README.md  migration.md
perldot/_includes/: comments.html  footer.html  head.html  quotes.html
perldot/_posts/: 2020-01-02-happy-new-year-perl.md  2020-02-01-ready-for-perl-5.32.0.md  2020-06-20-grant-extension-raku-perf.md
perldot/pages/: 404.md  blog.md  events.md  get.md  index.md  learn.md  lists.md
(+16 files in other folders)
