[metadata]
name = cyclic-a
version = 0.0.2
author = Thibault Duponchelle
author_email = thibault.duponchelle@gmail.com
description = A small package to test cyclic dependencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thibaultduponchelle/cyclic-a
project_urls =
    Bug Tracker = https://github.com/thibaultduponchelle/cyclic-a/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cyclic-b>=0

[options.packages.find]
where = src
