[metadata]
name = diamond-c
version = 0.0.1
author = Thibault Duponchelle
author_email = thibault.duponchelle@gmail.com
description = A small package to test diamond dependencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thibaultduponchelle/diamond-c
project_urls =
    Bug Tracker = https://github.com/thibaultduponchelle/diamond-c/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    diamond-d>=0
    diamond-e>=0

[options.packages.find]
where = src
