[metadata]
name = diamond-f
version = 0.0.4
author = Thibault Duponchelle
author_email = thibault.duponchelle@gmail.com
description = A small package to test diamond dependencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thibaultduponchelle/diamond-f
project_urls =
    Bug Tracker = https://github.com/thibaultduponchelle/diamond-f/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
