[metadata]
name = version-utf8
version = ðŸ
author = Thibault Duponchelle
author_email = thibault.duponchelle@gmail.com
description = A small package to test PyPi versions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thibaultduponchelle/version-utf8
project_urls =
    Bug Tracker = https://github.com/thibaultduponchelle/version-utf8/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
